# gic-prototype

./: AGENTS.md  README.md  pyproject.toml
bench/: aggregate.py  merge_summary.py  plot_figs.py  run_bench.py
bench/outputs/: bls_sec128.csv  bls_sec128_smoke.csv  bls_sec128_v2.csv  bls_smoke_v2.csv  gq_sec128.csv  gq_sec128_smoke.csv  gq_sec128_v2.csv  gq_smoke_v2.csv  gq_test.csv  schnorr_sec128.csv  schnorr_sec128_smoke.csv  schnorr_sec128_v2.csv  schnorr_smoke.csv  schnorr_smoke_v2.csv  summary_all_sec128.csv  summary_all_sec128_v2.csv  summary_bls_sec128.csv  summary_bls_sec128_smoke.csv  summary_bls_sec128_v2.csv  summary_gq_sec128.csv  summary_gq_sec128_smoke.csv  summary_gq_sec128_v2.csv  summary_gq_test.csv  summary_schnorr_sec128.csv  summary_schnorr_sec128_smoke.csv  summary_schnorr_sec128_v2.csv
src/gic/: __init__.py  codec.py  core.py  gic.py  interfaces.py  ro.py
src/instantiations/bls/: __init__.py  inst.py
src/instantiations/gq/: __init__.py  gq.py  inst.py
src/instantiations/schnorr/: __init__.py  inst.py
tests/: conftest.py  test_correctness_bls.py  test_correctness_gq.py  test_correctness_schnorr.py  test_imports.py  test_skeleton.py
