[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gic-prototype"
version = "0.0.0"
description = "Generic Implicit Certificate prototype scaffold"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "GIC Prototype"}]
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
